src/objects/CPA_PWORF__c.object
<CustomObject>
    <fields>
        <fullName>lkp_Unilever_Finance_BP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Finance Person Maybe Contacted To Confirm Budget And Cost Centre Details</description>
        <inlineHelpText>Finance Person Maybe Contacted To Confirm Budget And Cost Centre Details.</inlineHelpText>
        <label>Unilever Finance BP/Contact*</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PWORFs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Unilever_budget_approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Unilever person responsible for approving the project budget</description>
        <inlineHelpText>Name of Unilever person responsible for approving the project budget. (Could be more than one)</inlineHelpText>
        <label>Unilever Budget Approver*</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PWORFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Unilever_content_approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Unilever person responsible for approving the project content</description>
        <inlineHelpText>Name of Unilever person responsible for approving the project content. (Could be more than one)</inlineHelpText>
        <label>Unilever Content Approver*</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PWORFs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Unilever_project_manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of project manager</description>
        <inlineHelpText>Name of project manager</inlineHelpText>
        <label>Unilever Project Manager*</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PWORFs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ltxt_Reason_for_Cancellation__c</fullName>
        <label>Reason for Cancellation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mpkl_Project_Phases__c</fullName>
        <description>Phases of the project that are covered in the PWORF</description>
        <label>Project Phases*</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>num_Number_of_SLA1_Days__c</fullName>
        <label>Number of SLA1 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Number_of_SLA2_Days__c</fullName>
        <label>Number of SLA2 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_PWORF_Age__c</fullName>
        <label>PWORF Age</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>per_Budget_Expenses_of_Resource_Cost__c</fullName>
        <label>Budget Expenses (% of Resource Cost)*</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ph_Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>pkl_Approval_Comment_Check__c</fullName>
        <label>Approval Comment Check</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Breach_Applicable__c</fullName>
        <label>Breach Applicable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Business_Area__c</fullName>
        <label>Business Area*</label>
        <picklist>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT &amp; Comms</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>pkl_Cost_Centre_Details__c</fullName>
        <description>Cost center funding detail</description>
        <label>Cost Center Details*</label>
        <picklist>
            <picklistValues>
                <fullName>ETS IT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non ETS IT - Business Funded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Is_this_Project_Invasive_in_nature__c</fullName>
        <inlineHelpText>If this project is invasive, please list the countries and/or applications impacted and the testing requirements.  Invasive changes should be tested additionally during the UAT/Regression Test Phase, if required by the impacted countries</inlineHelpText>
        <label>Is this ‘Project’ Invasive in nature?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Landscape__c</fullName>
        <description>Landscape to which the project belongs</description>
        <label>Landscape*</label>
        <picklist>
            <picklistValues>
                <fullName>Cordillera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sirius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2K2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Penalty_Applicable__c</fullName>
        <label>Penalty Applicable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Phases_covered_by_the_WAR__c</fullName>
        <label>Phases covered by the WAR</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>pkl_Pricing_Model__c</fullName>
        <description>Pricing model of the project</description>
        <label>Pricing Model*</label>
        <picklist>
            <picklistValues>
                <fullName>T&amp;M</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Process_Office_Area_E2E__c</fullName>
        <description>Name of department</description>
        <label>Process Office Area E2E*</label>
        <picklist>
            <picklistValues>
                <fullName>S&amp;OP (Demand Management / Operations Planning)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order To Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make To Deliver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase To Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control To Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close To Report (Management ac / Finance ac)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Data Lifecycle Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Project_Scale__c</fullName>
        <description>Project scale</description>
        <inlineHelpText>Project Scale</inlineHelpText>
        <label>Project Type*</label>
        <picklist>
            <picklistValues>
                <fullName>Large Project (&gt;2000 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Project (500 - 2000 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Complexity Project (50 - 500 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Project (&lt;50 days)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Region__c</fullName>
        <description>Region to be billed</description>
        <inlineHelpText>Please state which region is to be billed.</inlineHelpText>
        <label>Region*</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Request_Type__c</fullName>
        <description>Type of project</description>
        <label>Request Type*</label>
        <picklist>
            <picklistValues>
                <fullName>New Project</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Project Work Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Scope Change (CR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Secondment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Status__c</fullName>
        <description>Auto generated based on user actions</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmitted</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Withhold</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Accepted</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Answered</fullName>
                <color>#B6E32E</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Sustainability_Objective__c</fullName>
        <description>To check if the project is linked to sustainility objective</description>
        <inlineHelpText>Is this project linked to sustainability Objective?</inlineHelpText>
        <label>Sustainability Objective</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>txt_Action__c</fullName>
        <description>Action Pending</description>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Clarity_ID__c</fullName>
        <description>Clarity of the project</description>
        <inlineHelpText>Please provide clarity ID to which project belongs.</inlineHelpText>
        <label>Clarity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Cost_Centre__c</fullName>
        <description>Cost Center to which the project belongs</description>
        <inlineHelpText>Cost Center to which the project belongs</inlineHelpText>
        <label>Cost Center*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_ICC_Number__c</fullName>
        <description>ICC Number to which the project belongs</description>
        <inlineHelpText>Please provide Internal Cost Center number</inlineHelpText>
        <label>ICC Number*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Internal_PWO_ID__c</fullName>
        <inlineHelpText>Internal PWO ID</inlineHelpText>
        <label>Internal PWO ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_OtherProjectPhases__c</fullName>
        <description>Phases of the project that are covered in the PWORF required if Other is selected in Phases of the project</description>
        <inlineHelpText>Mandatory, if Other is selected in Project Phases.</inlineHelpText>
        <label>Other -Project Phases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Project_Repository_Location__c</fullName>
        <inlineHelpText>Location where the project repository will be stored</inlineHelpText>
        <label>Project Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Project_requestor_Name__c</fullName>
        <description>Project requestor Name</description>
        <label>Project requestor Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Resource_Location__c</fullName>
        <label>Resource Location*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Role_Level_1_13__c</fullName>
        <label>Role (Level 1-13)*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_SLA1__c</fullName>
        <description>Capture SLA1 in the background as per the project type and project phase.</description>
        <label>PWORF to be accepted by (SLA1 in Days)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_SLA2__c</fullName>
        <description>Capture SLA2 in the background as per the project type and project phase.</description>
        <label>PWORF to be answered by (SLA2 in Days)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Unilever_Budget_Approver_Name__c</fullName>
        <description>Unilever Budget Approver Name*</description>
        <inlineHelpText>Name of Unilever person responsible for approving the project budget.</inlineHelpText>
        <label>Unilever Budget Approver Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Unilever_Content_Approver_Name__c</fullName>
        <description>Unilever Content Approver Name*</description>
        <inlineHelpText>Name of Unilever person responsible for approving the project content.</inlineHelpText>
        <label>Unilever Content Approver Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Unilever_Finance_BP_Contact_Name__c</fullName>
        <description>Unilever Finance BP/Contact Name*</description>
        <inlineHelpText>Name of Finance Person Maybe Contacted To Confirm Budget And Cost Centre Details</inlineHelpText>
        <label>Unilever Finance BP/Contact Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Unilever_Project_Manager_Name__c</fullName>
        <description>Unilever Project Manager Name*</description>
        <inlineHelpText>Name of project manager</inlineHelpText>
        <label>Unilever Project Manager Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_otherProcessOfficeAreaE2E__c</fullName>
        <inlineHelpText>This filed is manditory, if Other is selected in &apos;Process Office Area E2E&apos;</inlineHelpText>
        <label>Other-Process Office area E2E</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txta_Acceptance_Criteria__c</fullName>
        <description>Specific acceptance criteria against which Unilever will decide whether the project has been delivered to its satisfaction.</description>
        <inlineHelpText>It is important to set out here the specific acceptance criteria against which Unilever will decide whether the project has been delivered to its satisfaction.</inlineHelpText>
        <label>Acceptance Criteria *</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Application_infrastructure__c</fullName>
        <description>This information is for Unilever IT technical services</description>
        <inlineHelpText>This information is for Unilever IT technical services.  Provide details of infrastructure requirement (eg server, databases or new equipment required for this project, and list the applications affected)</inlineHelpText>
        <label>Application Infrastructure*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Business_critical_milestones__c</fullName>
        <label>Business Critical Milestones*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_HLE_Value__c</fullName>
        <description>[Drafting Note:  If an HLE has been provided, please give details of the estimated value.  If there is no HLE, please write “Not applicable”.]</description>
        <label>HLE Value (€)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_High_Level_Estimate__c</fullName>
        <description>If a HLE has been given, please insert reference to HLE document.  Otherwise mark ‘Not applicable’</description>
        <label>High Level Estimate (HLE)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_ITC_Resources_Utilisation__c</fullName>
        <description>What specific roles do you require? Are you expecting any ITC resources to be utilized during this period?</description>
        <inlineHelpText>What specific roles do you require? Are you expecting any ITC resources to be utilized during this period?</inlineHelpText>
        <label>ITC Resources Utilization</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>txta_Impact__c</fullName>
        <label>Impact*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Mitigation_Action__c</fullName>
        <label>Mitigation Action*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Other_Request_Type__c</fullName>
        <label>Other-Request Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_PWO_linked_to_CR__c</fullName>
        <description>PWO to which the CR belongs to</description>
        <label>PWO linked to CR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Probability__c</fullName>
        <label>Probability*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Project_Description__c</fullName>
        <inlineHelpText>Please Write a Para (Maximum 255 Words)….</inlineHelpText>
        <label>Project Description*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Project_Invasive_in_nature__c</fullName>
        <label>Why Project Invasive in nature?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Project_Require_Performance_Testing__c</fullName>
        <label>Project Require Performance Testing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Reason_for_Return__c</fullName>
        <label>Reason for Withhold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txta_Risk_Assessment_and_Mitigation__c</fullName>
        <description>Brief details of the risks</description>
        <inlineHelpText>[Drafting Note:  Please enter brief details of the risks which, from a Unilever perspective, might stop the project from being delivered on time and on budget. You should describe what can be done to mitigate each risk]</inlineHelpText>
        <label>Risk Assessment and Mitigation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Risk_description__c</fullName>
        <label>Risk Description*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Role_or_System_Authorisation_detail__c</fullName>
        <label>Role or System Authorisation detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Summary_of_Business_Case__c</fullName>
        <inlineHelpText>Please provide below

&quot;Business case&quot;
&quot;Overall purpose or function of the project&quot;
&quot;In scope&quot;
&quot;Out of scope&quot;
&quot;Stakeholder expectations&quot;</inlineHelpText>
        <label>Summary of Business Case</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Summary_of_requirements__c</fullName>
        <description>Unilever’s requirements in respect of the Resource Augmentation Project</description>
        <inlineHelpText>Please provide below details 

&quot;Role (Level 1-13)&quot;

&quot;Resource Location&quot;

&quot;Man days&quot;

&quot;Budget Expenses (% of Resource Cost)&quot;

&quot;Indicative timeline (start and end date)&quot;</inlineHelpText>
        <label>Summary of requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Third_Party_Details__c</fullName>
        <description>Third parties involved on the project that Accenture will need to engage with</description>
        <inlineHelpText>Please list any third parties involved on the project that Accenture will need to engage with.</inlineHelpText>
        <label>Third Party Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Title__c</fullName>
        <description>Title of the Project</description>
        <inlineHelpText>Please enter name of Project as it appears in Clarity.</inlineHelpText>
        <label>Title*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_What_specific_roles_do_you_require__c</fullName>
        <description>Period of work commencing before actual PWO is submitted</description>
        <label>What specific roles do you require?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Why_is_Work_at_risk_required__c</fullName>
        <description>Period of work commencing before actual PWO is submitted</description>
        <label>Why is Work at Risk required?</label>
        <type>TextArea</type>
    </fields>
    <label>PWORF</label>
    <listViews>
        <fullName>All_PWORF</fullName>
        <columns>NAME</columns>
        <columns>auto_PWORF_ID__c</columns>
        <columns>txt_Clarity_ID__c</columns>
        <columns>dt_Date_Of_Request__c</columns>
        <columns>dat_Submitted_Date__c</columns>
        <columns>pkl_Status__c</columns>
        <columns>VDM_Name__c</columns>
        <columns>Latest_PWO_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All PWORF</label>
        <language>en_US</language>
        <sharedTo>
            <group>CAP_SMT_Group</group>
            <group>CAP_ULFT_Group</group>
            <group>CAP_ULPT_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAP_ULPM_CPA_PWORF</fullName>
        <filterScope>Queue</filterScope>
        <label>ULPM</label>
        <queue>CAP_ULPM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAP_VDM_Queue_CPA_PWORF</fullName>
        <filterScope>Queue</filterScope>
        <label>VDM</label>
        <queue>CAP_VDM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPA_SMT_CPA_PWORF</fullName>
        <filterScope>Queue</filterScope>
        <label>SMT</label>
        <queue>CPA_SMT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PWORF_Assigned_to_ULPM</fullName>
        <columns>NAME</columns>
        <columns>auto_PWORF_ID__c</columns>
        <columns>txt_Clarity_ID__c</columns>
        <columns>dt_Date_Of_Request__c</columns>
        <columns>dat_Submitted_Date__c</columns>
        <columns>pkl_Status__c</columns>
        <columns>VDM_Name__c</columns>
        <columns>Latest_PWO_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>PWORF Assigned to ULPM</label>
        <language>en_US</language>
        <queue>CAP_ULPM</queue>
        <sharedTo>
            <group>CAP_SMT_Group</group>
            <group>CAP_ULPM_group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PWORF_Assigned_to_VDM</fullName>
        <columns>NAME</columns>
        <columns>auto_PWORF_ID__c</columns>
        <columns>txt_Clarity_ID__c</columns>
        <columns>dt_Date_Of_Request__c</columns>
        <columns>dat_Submitted_Date__c</columns>
        <columns>pkl_Status__c</columns>
        <columns>VDM_Name__c</columns>
        <columns>Latest_PWO_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>PWORF Assigned to VDM</label>
        <language>en_US</language>
        <queue>CAP_VDM_Queue</queue>
        <sharedTo>
            <group>CAP_SMT_Group</group>
            <group>CAP_VDM_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PWORF_Created_By_Me</fullName>
        <columns>NAME</columns>
        <columns>auto_PWORF_ID__c</columns>
        <columns>txt_Clarity_ID__c</columns>
        <columns>dt_Date_Of_Request__c</columns>
        <columns>dat_Submitted_Date__c</columns>
        <columns>pkl_Status__c</columns>
        <columns>VDM_Name__c</columns>
        <columns>Latest_PWO_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>PWORF Created By Me</label>
        <language>en_US</language>
        <sharedTo>
            <group>CAP_SMT_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>PWORF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PWORF</pluralLabel>
    <recordTypes>
        <fullName>All</fullName>
        <active>true</active>
        <description>This record type is applicable for Other Project Types</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>RA</fullName>
        <active>true</active>
        <description>This record type is applicable for Resource Augmentation Project Types</description>
        <label>Resource Augmentation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Acceptance_Criteria</fullName>
        <active>false</active>
        <description>Mandatory</description>
        <errorConditionFormula>AND(( ISBLANK(txta_Acceptance_Criteria__c) ),OR(ISPICKVAL(pkl_Status__c , &apos;Submitted&apos;),ISPICKVAL(pkl_Status__c , &apos;Resubmitted&apos;)))</errorConditionFormula>
        <errorDisplayField>txta_Acceptance_Criteria__c</errorDisplayField>
        <errorMessage>Mandatory</errorMessage>
    </validationRules>
</CustomObject>